--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,8 +10,11 @@
       <div class="container">
         <nav>
           <ul class='menu'>
-            <li><a href='/home'>Home</a></li>
-            <li><a href='/about'>About</a></li>
+            <li class='active'><a href='/home'>Home</a></li>
+            <li {% if active_page == '/about'%}
+                class = 'active'
+              {% endif %}>           
+            <a href='/about'>About</a></li>
             <li><a href='/contact'>Contact</a></li>
           </ul>
         </nav>
