--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block saturs %}
-<h1>This gay nigga</h1>
-<p>Nigga more gay lmao</p>
+<h1>This life is trash</h1>
+<p>Pls end Iran loooool</p>
 
 {% endblock %}
