--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block saturs %}
-<h1>Yes blyad</h1>
+<h1>Yes</h1>
 <p>This site is better then FaCeBoOk lolz</p>
 <p>my fake number bruh: {{ phone }} </p>
 
